--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,18 @@
 <hello name="{{ name }}"></hello>
 <p>
   Belajar Angular Pertama!
+
+  <br><br>
+  {{"contoh menulis di Angular"}}
+  25 + 25 = {{25+25}}
+  <br><br>
+
+  <input [(ngModel)] = "a" type="number"> *
+  <input [(ngModel)]="b" type="number">
+  <br>
+  {{a*b}}
 </p>
+
+<div>
+  {{item.nama}} harganya {{item.harga}}
+</div>
