--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,37 @@
 
 <div *ngFor="let buah of itembuah; let i = index" >
  {{i+1}}. {{buah.nama}} - {{buah.harga | currency: 'Rp'}}
+</div> 
+
+<div *ngFor="let data of itemArr">
+  {{data}}
 </div>
+
+<p *ngIf="show">Tampilkan jika nilai = true</p>
+
+<ng-template *ngIf="show; then showBlock else notShowBlock"></ng-template>
+<ng-template #showBlock>Show When True</ng-template>
+<ng-template #notShowBlock>Show When False</ng-template>
+<br><br>
+<input [(ngModel)]=user type="text">
+<p *ngIf="user">Halo{{user}}</p>
+<br><br>
+<button (click)="klikButton()">Coba Di Tekan</button>
+{{pesan}}
+<br><br><br>
+
+<input [(ngModel)]="c" type="number"> <input [(ngModel)]="d" type="number">
+
+<button (click)="hitung(c,d)">Hitung</button>
+<br>
+Hasil: {{output}}
+<br>
+Pola
+<ng-template *ngIf="output%2==0; then showGenap else showGanjil"></ng-template>
+<ng-template #showGenap>B</ng-template>
+<ng-template #showGanjil>A</ng-template>
+<br>
+
+
+
+
